--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+
+<article> This is me </article>
+
     <h1>Look at me, im batman?</h1>
+    <h2>You better watch out!</h2>
+    <h3>You better not cry</h3>
     
 </body>
 </html>
