--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<article> This is me </article>
+<article> Heyo </article>
 
     <h1>Look at me, im batman?</h1>
     <h2>You better watch out!</h2>
